Add phase 4 codes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,13 +33,14 @@ set_target_properties(hts::htslib PROPERTIES
 add_executable(placer src/main.cpp)
 
 target_include_directories(placer PRIVATE ${HTSLIB_INCLUDE_DIR})
-target_link_libraries(placer PRIVATE hts::htslib stream gate1 component local_realign)
+target_link_libraries(placer PRIVATE hts::htslib stream gate1 component local_realign assembly)
 
 # Add subdirectories
 add_subdirectory(src/stream)
 add_subdirectory(src/gate1)
 add_subdirectory(src/component)
 add_subdirectory(src/local_realign)
+add_subdirectory(src/assembly)
 
 # Test configuration
 enable_testing()
