Add consensues part

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ add_library(placer_pipeline
     src/gate1/gate1_module.cpp
     src/component/insert_fragment_module.cpp
     src/component/te_quick_classifier.cpp
+    src/component/te_consensus_module.cpp
 )
 target_include_directories(placer_pipeline PUBLIC include)
 target_link_libraries(placer_pipeline PUBLIC placer_bam_io)
